gccida/c1/combine_givs
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7918:1: error: use of undeclared identifier 'induction_1'
induction_1 *giv; // rcx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7918:14: error: use of undeclared identifier 'giv'; did you mean 'div'?
induction_1 *giv; // rcx 
             ^~~
             div
/usr/include/stdlib.h:849:14: note: 'div' declared here
extern div_t div (int __numer, int __denom)
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7922:1: error: use of undeclared identifier 'induction_1'
induction_1 *v6; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7922:14: error: use of undeclared identifier 'v6'
induction_1 *v6; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7927:1: error: use of undeclared identifier 'induction_1'
induction_1 **v11; // rdx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7927:15: error: use of undeclared identifier 'v11'; did you mean 'v10'?
induction_1 **v11; // rdx 
              ^~~
              v10
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7926:6: note: 'v10' declared here
rtx *v10; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7932:1: error: use of undeclared identifier 'induction_1'
induction_1 *v16; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7932:14: error: use of undeclared identifier 'v16'
induction_1 *v16; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7937:1: error: use of undeclared identifier 'induction_1'
induction_1 *v21; // r12 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7937:14: error: use of undeclared identifier 'v21'; did you mean 'v20'?
induction_1 *v21; // r12 
             ^~~
             v20
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7936:9: note: 'v20' declared here
__int64 v20; // r13 
        ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7941:1: error: use of undeclared identifier 'induction_1'
induction_1 **v25; // rdx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7941:15: error: use of undeclared identifier 'v25'; did you mean 'v22'?
induction_1 **v25; // rdx 
              ^~~
              v22
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7938:5: note: 'v22' declared here
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7943:1: error: use of undeclared identifier 'induction_1'
induction_1 *v27; // rax 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7943:14: error: use of undeclared identifier 'v27'
induction_1 *v27; // rax 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7944:1: error: use of undeclared identifier 'induction_1'
induction_1 **v28; // r8 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7944:15: error: use of undeclared identifier 'v28'; did you mean 'v22'?
induction_1 **v28; // r8 
              ^~~
              v22
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7938:5: note: 'v22' declared here
rtx v22; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7953:1: error: use of undeclared identifier 'induction_1'
induction_1 *v37; // rbx 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7953:14: error: use of undeclared identifier 'v37'
induction_1 *v37; // rbx 
             ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/loop.c:7956:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v40; // esi 
^
enum 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/combine_givs/src/obj/loop.o] Error 1
